<resources>
    <string name="app_name">exammrbh</string>

    <string name="pad1">1</string>
    <string name="pad2">2</string>
    <string name="pad3">3</string>
    <string name="pad4">4</string>
    <string name="pad5">5</string>
    <string name="pad6">6</string>
    <string name="pad7">7</string>
    <string name="pad8">8</string>
    <string name="pad9">9</string>
    <string name="pad0">0</string>
    <string name="pad_del">del</string>

    <string name="header_login">This is just a Sample UI.</string>
    <string name="subHeader_login">Open to create your style :D</string>
    <string name="hello_user">Hi! User</string>
</resources>